# brewing

./: .gitignore  .pre-commit-config.yaml  LICENCE  Makefile  compose.yaml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  publish.yaml
cauldron/: pyproject.toml
cauldron/src/cauldron/: application.py  db.py  settings.py  testing.py  users.py
cauldron/src/cauldron/resources/: models.py  repo.py  router.py
cauldronlib/runtime-generic/: pyproject.toml
docs/: README.md  cli.md  generic.md  http.md
framework/: pyproject.toml
framework/src/brewing/: __init__.py  __main__.py  app_test.py  brewing.py  generic.py  generic_test.py  main.py  main_test.py  plugin_test.py  settings.py
framework/src/brewing/cli/: __init__.py  cli.py  global_cli.py
framework/src/brewing/db/: base.py  database.py  migrate.py  testing.py  types.py
framework/src/brewing/healthcheck/: healthcheck_test.py  viewset.py
framework/src/brewing/http/: __init__.py  annotations.py  annotations_test.py  asgi.py  endpoint_decorator.py  path.py  viewset.py  (+2 more)
framework/src/cauldron/: __init__.py  application.py  cli.py  configuration.py  development.py  exceptions.py  old_cli.py  root_router.py
framework/tests/: test_configuration.py
framework/tests/http/: test_viewsets.py
framework/tests/resources/: test_repo.py
ideas/: typer_args_vs_options.py  wrap_alembic.py
ideas/versions/: 203ab368ee5c_.py
incubator/: README.md  pyproject.toml
incubator/src/brewing_incubator/: __init__.py  application.py  configuration.py  development.py  exceptions.py  old_cli.py  root_router.py
incubator/src/brewing_incubator/auth/: exceptions.py  models.py  repo.py  users.py
incubator/src/brewing_incubator/db/: database.py  session.py
incubator/src/brewing_incubator/db/migrations/: env.py
incubator/src/brewing_incubator/http/: __init__.py  asgi.py  security.py
incubator/src/brewing_incubator/http/viewset/: base.py  const.py  endpoints.py
incubator/src/brewing_incubator/resources/: models.py  repo.py  router.py
incubator/src/brewing_incubator/testing/: __init__.py  resource.py  scenario.py  user.py
incubator/src/cauldron_incubator/: __init__.py  application.py  configuration.py  development.py  old_cli.py  root_router.py
incubator/src/cauldron_incubator/auth/: exceptions.py  models.py  repo.py  users.py
incubator/src/cauldron_incubator/db/: database.py  session.py
incubator/src/cauldron_incubator/db/migrations/: env.py
incubator/src/cauldron_incubator/http/: responses.py
incubator/src/cauldron_incubator/http/viewset/: base.py  const.py  endpoints.py
incubator/src/cauldron_incubator/resources/: models.py  repo.py  router.py
incubator/src/cauldron_incubator/testing/: resource.py  scenario.py  user.py
incubator/tests/: test_application.py  test_configuration.py
incubator/tests/auth/: test_repo.py  test_service.py
incubator/tests/db/: test_database.py
incubator/tests/http/: test_viewsets.py
incubator/tests/resources/: test_models.py  test_repo.py
libs/cli/: README.md  pyproject.toml
libs/cli/src/brewinglib/cli/: cli.py
libs/cli/src/cauldronlib/cli/: cli.py  testing.py
libs/cli/tests/: test_cli.py
libs/db/: pyproject.toml
libs/db/test/: test_testing.py  test_types.py
libs/db/tests/: conftest.py  test_columns.py  test_database.py  test_migrations.py  test_types.py
libs/generic/: README.md  pyproject.toml
libs/generic/tests/: test_runtime_generic.py
project-manager/: pyproject.toml
project-manager/src/project_manager/: _version.py  api.py  application.py  cli.py  testing.py
project-manager/tests/: conftest.py  test_cli.py
project-manager/tests/api/: test_resource.py  test_user.py
project-manager/tests/db/: test_base_models.py  test_migrations.py
project-manager/tests/repo/: test_repo.py
samples/example/: pyproject.toml
samples/example/src/example/: app.py
samples/exploration/: pyproject.toml  test_serialization.py
samples/generated-project/: pyproject.toml
samples/generated-project/src/generated_project/: app.py
samples/generated-project/src/generated_project/db_revisions/: rev_00000_new_revision.py  rev_00001_foo.py  rev_00002_foo.py
samples/project-manager/: pyproject.toml
samples/project-manager/src/project_manager/: app.py
samples/project-manager/src/project_manager/versions/: 00005_add_accesslevel_table.py
samples/project-manager/tests/: conftest.py  test_api.py  test_cli.py  test_migrations.py
samples/testing-samples/: pyproject.toml
samples/testing-samples/src/testing_samples/: __init__.py  db_sample1.py  sample1.py
scripts/: manage_project.py  manage_pyproject.py  publish_matrix.py
src/brewing/: __init__.py  app.py  app_test.py  config.py  config_test.py  context.py  context_test.py  generic_test.py  plugin.py  plugin_test.py  serialization.py
src/brewing/cli/: __init__.py  cli.py  testing.py
src/brewing/db/: __init__.py  base.py  base_test.py  database.py  migrate.py  mixins.py  repo.py  settings.py  testing.py  types.py  utilities.py
src/brewing/healthcheck/: healthcheck_test.py  viewset.py
src/brewing/http/: __init__.py  annotations.py  annotations_test.py  asgi.py  endpoint_decorator.py  path.py  path_test.py  testing.py  viewset.py  viewset_test.py
src/brewing/project/: cli.py  generation.py  generation_test.py  pyproject.py  state.py
src/project_manager/: __init__.py  __main__.py  _version.py  api.py  application.py  cli.py  constants.py  db.py  endpoints.py  exceptions.py  logging.py  models.py  project_manager.py  root_router.py  secret.py  secrets.py  settings.py  testing.py  users.py
src/project_manager/migrations/: env.py
src/project_manager/organizations/: models.py  repo.py  router.py
src/project_manager/resources/: models.py  repo.py  router.py
src/project_manager/users/: auth.py  models.py  router.py  schemas.py
test-dependencies/: pyproject.toml
tests/: conftest.py
tests/api/: conftest.py  scenario.py  test_organizations.py  test_resource.py  test_root.py  test_user.py
tests/db/: test_base_models.py  test_migrations.py
tests/repo/: test_repo.py
(+70 files in other folders)
