[project]
name = "brewing-uv-workspace"
version = "0.0.9"
description = "Add your description here"
readme = "docs/README.md"
requires-python = ">=3.13"
dependencies = [
    "brewing",
    "project-manager",
    "brewing-test-dependencies",
    "brewing-incubator",
    "testing-samples",
]

[project.urls]
Homepage = "https://mikemcowie.github.io/brewing/"
Documentation = "https://mikemcowie.github.io/brewing/"
Repository = "https://github.com/mikemcowie/brewing"
Issues = "https://github.com/mikemcowie/brewing"
Releases = "https://github.com/mikemcowie/brewing/releases"
[tool.uv.workspace]
members = [
    "framework",
    "samples/*",
    "test-dependencies",
    "incubator",
]

[tool.uv.sources]
project-manager = { workspace = true }
brewing = { workspace = true }
brewing-test-dependencies = { workspace = true }
brewing-incubator = {workspace=true}
testing-samples = {workspace = true}

[dependency-groups]
dev = [
    "brewing-test-dependencies",
    "pre-commit>=4.3.0",
    "tenacity>=9.1.2",
    "uv>=0.8.22",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
    "mkdocstrings[python]>=0.30.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
extend-select = [
    "A",
    "B",
    "Q",
    "C4",
    "DTZ",
    "FIX",
    "ISC",
    "ICN",
    "LOG",
    "T",
    "PT",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "I",
    "C90",
    "N",
    "UP",
    "FURB",
    "RUF",
    "TRY",
    "TC",
    "PERF",
    "PL",
    "UP",
    ]
extend-ignore = [
    "A002",
    "TRY003", # disagree about error message length
    "N818", # disagree about error naming
    "PLC0414",
    "RUF009",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "ARG001", # pytest fixtures may cause unused function args to be valid
    "PLR2004" # magic values are reasonable in tests
    ]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov-report=html --cov-report=term --cov=. --cov-fail-under=90 --cov-context=test --cov-branch --html=testreport/index.html --markdown-docs"
filterwarnings = [
    "error",
    # testcontainers internal warnings https://github.com/testcontainers/testcontainers-python/issues/715
    "ignore:.*The wait_for_logs function with string or callable predicates is deprecated.*",
    "ignore:.*The @wait_container_is_ready decorator is deprecated and will be removed in a future version.*",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
norecursedirs = ".venv incubator/src/brewing_incubator/db/migrations framework/src/brewing/db/_migrationcontext"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'if not TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
    'assert False',
    'pytest.fail',
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "sqlalchemy.orm.DeclarativeBase", "brewing.db.base.Base"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
