[project]
name = "brewing-uv-workspace"
version = "0.0.11-rc.1"
description = "Add your description here"
readme = "docs/README.md"
requires-python = ">=3.13"
dependencies = [
    "brewing",
    "brewing-test-dependencies",
    "structlog>=25.5.0",
    "testing-samples",
    "tomlkit>=0.13.3",
]

[project.urls]
Homepage = "https://mikemcowie.github.io/brewing/"
Documentation = "https://mikemcowie.github.io/brewing/"
Repository = "https://github.com/mikemcowie/brewing"
Issues = "https://github.com/mikemcowie/brewing"
Releases = "https://github.com/mikemcowie/brewing/releases"
[tool.uv.workspace]
members = [
    "framework",
    "samples/*",
    "test-dependencies",
]

[tool.uv.sources]
brewing = { workspace = true }
brewing-test-dependencies = { workspace = true }
testing-samples = {workspace = true}

[dependency-groups]
dev = [
    "brewing-test-dependencies",
    "pre-commit>=4.3.0",
    "tenacity>=9.1.2",
    "uv>=0.8.22",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
    "mkdocstrings[python]>=0.30.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
extend-select = [
    "A",
    "B",
    "Q",
    "C4",
    "DTZ",
    "FIX",
    "ISC",
    "ICN",
    "LOG",
    "T",
    "PT",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "I",
    "C90",
    "N",
    "UP",
    "FURB",
    "RUF",
    "TRY",
    "TC",
    "PERF",
    "PL",
    "UP",
    ]
extend-ignore = [
    "A002",
    "TRY003", # disagree about error message length
    "N818", # disagree about error naming
    "PLC0414",
    "RUF009",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "ARG001", # pytest fixtures may cause unused function args to be valid
    "PLR2004" # magic values are reasonable in tests
    ]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov-report=html --cov-report=term --cov=. --cov-fail-under=90 --cov-context=test --cov-branch --html=testreport/index.html --markdown-docs"
filterwarnings = [
    "error",
    # testcontainers internal warnings https://github.com/testcontainers/testcontainers-python/issues/715
    "ignore:.*The wait_for_logs function with string or callable predicates is deprecated.*",
    "ignore:.*The @wait_container_is_ready decorator is deprecated and will be removed in a future version.*",
    # sqlalchemy __del__ on connection sometimes has issues due to connection being deleted
    # without being closed, evaluated ignorable in tests.
    "ignore:.*Exception ignored while calling deallocator.*",
    "ignore:.*Exception ignored while finalizing socket.*",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
norecursedirs = ".venv framework/src/brewing/db/_migrationcontext"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
core = "ctrace"


[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'if not TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
    'assert False',
    'pytest.fail',
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "sqlalchemy.orm.DeclarativeBase", "brewing.db.base.Base"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
