[project]
name = "brewing"
version = "0.0.12-rc.1"
description = "A web framework built on sqlachemy and fastapi."
readme = "docs/README.md"
authors = [
    { name = "Mike Cowie", email = "24739590+mikemcowie@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.118.0",
    "frozendict>=2.4.6",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "sqlalchemy-utils>=0.42.0",
    "structlog>=25.4.0",
    "tomlkit>=0.13.3",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
    "watchfiles>=1.1.0",
]

[project.optional-dependencies]
testing = [
    "testcontainers>=4.12.0",
]
postgresql = [
    "psycopg[binary]>=3.2.10",
]
mysql = [
    "aiomysql>=0.2.0",
    "mysqlclient>=2.2.7",
]
mariadb = [
    "brewing[mysql]"
]
sqlite = [
    "aiosqlite>=0.21.0",
]
posgresql = [
    "psycopg>=3.2.9",
]
all = [
    "brewing[mysql,mariadb,postgresql,sqlite]"
]

[project.urls]
Homepage = "https://mikemcowie.github.io/brewing/"
Documentation = "https://mikemcowie.github.io/brewing/"
Repository = "https://github.com/mikemcowie/brewing"
Issues = "https://github.com/mikemcowie/brewing"
Releases = "https://github.com/mikemcowie/brewing/releases"


[project.scripts]
brewing = "brewing.__main__:cli"

[project.entry-points.brewing]
project = "brewing.project.cli:load"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "brewing-test-dependencies",
    "pre-commit>=4.3.0",
    "tenacity>=9.1.2",
    "testing-samples",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
    "mkdocstrings[python]>=0.30.0",
]

[tool.uv.workspace]
members = [
    "samples/*",
    "test-dependencies",
]

[tool.uv.sources]
brewing = { workspace = true }
brewing-test-dependencies = { workspace = true }
testing-samples = { workspace = true }

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
extend-select = [
    "A",
    "B",
    "Q",
    "C4",
    "DTZ",
    "FIX",
    "ISC",
    "ICN",
    "LOG",
    "T",
    "PT",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "I",
    "C90",
    "N",
    "UP",
    "FURB",
    "RUF",
    "TRY",
    "TC",
    "PERF",
    "PL",
    "UP",
    ]
extend-ignore = [
    "A002",
    "TRY003", # disagree about error message length
    "N818", # disagree about error naming
    "PLC0414",
    "RUF009",
    "PT011",
]

[tool.ruff.lint.per-file-ignores]
"**/*test*.py" = [
    "ARG001", # pytest fixtures may cause unused function args to be valid
    "PLR2004" # magic values are reasonable in tests
    ]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov-report=html --cov-report=term --cov=. --cov-fail-under=90 --cov-context=test --cov-branch --html=testreport/index.html --markdown-docs"
filterwarnings = [
    "error",
    # testcontainers internal warnings https://github.com/testcontainers/testcontainers-python/issues/715
    "ignore:.*The wait_for_logs function with string or callable predicates is deprecated.*",
    "ignore:.*The @wait_container_is_ready decorator is deprecated and will be removed in a future version.*",
    # sqlalchemy __del__ on connection sometimes has issues due to connection being deleted
    # without being closed, evaluated ignorable in tests.
    "ignore:.*Exception ignored while calling deallocator.*",
    "ignore:.*Exception ignored while finalizing socket.*",
    "ignore::ResourceWarning",
    "ignore:.*Event loop is closed.*",
    "ignore::pytest.PytestUnraisableExceptionWarning"
]
python_files = [
    "test_*.py",
    "*_test.py",
]
norecursedirs = ".venv src/brewing/db/_migrationcontext"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]


[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'if not TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
    'assert False',
    'pytest.fail',
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "sqlalchemy.orm.DeclarativeBase", "brewing.db.base.Base"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
