[project]
name = "brewing-incubator"
version = "0.0.1"
description = "Experimental/preview modules for brewing."
readme = "README.md"
authors = [
    { name = "Mike Cowie", email = "24739590+mikemcowie@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "cryptography>=45.0.5",
    "fastapi[standard]>=0.115.13",
    "passlib[argon2]>=1.7.4",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "pyyaml>=6.0.2",
    "brewinglib-generic",
    "sqlalchemy>=2.0.41",
    "structlog>=25.4.0",
    "typer>=0.16.0",
    "uvicorn>=0.34.3",
]

[project.urls]
Homepage = "https://mikemcowie.github.io/brewing/"
Documentation = "https://mikemcowie.github.io/brewing/"
Repository = "https://github.com/mikemcowie/brewing"
Issues = "https://github.com/mikemcowie/brewing"
Releases = "https://github.com/mikemcowie/brewing/releases"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
]
