[project]
name = "brewing-test-dependencies"
version = "0.0.6"
description = "brewing's test dependencies"
readme = "README.md"
authors = [
    { name = "Mike Cowie", email = "24739590+mikemcowie@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "brewinglib-db[all]",
    "coverage>=7.9.1",
    "hatch>=1.14.1",
    "hatchling>=1.27.0",
    "ipython>=9.3.0",
    "polyfactory>=2.21.0",
    "pygit2>=1.18.2",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-alembic>=0.12.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-html>=4.1.1",
    "pytest-markdown-docs>=0.9.0",
    "pytest-subtests>=0.14.2",
    "pytest-xdist>=3.8.0",
    "pyyaml>=6.0.2",
    "ruff>=0.12.0",
    "semver>=3.0.4",
    "testcontainers>=4.10.0",
    "types-passlib>=1.7.7.20250602",
    "types-sqlalchemy-utils>=1.1.0",
]

[project.urls]
Homepage = "https://mikemcowie.github.io/brewing/"
Documentation = "https://mikemcowie.github.io/brewing/"
Repository = "https://github.com/mikemcowie/brewing"
Issues = "https://github.com/mikemcowie/brewing"
Releases = "https://github.com/mikemcowie/brewing/releases"
[dependency-groups]
dev = [
    "tomlkit>=0.13.3",
]

[tool.uv.sources]
brewinglib-db = { workspace = true }
