[project]
name = "example"
readme = "README.md"
version = "0.0.1"
dependencies = ["brewing[postgresql]"]
requires-python = ">=3.14"

[project.entry-points.brewing]
example = "example.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["brewing[testing]", "pytest"]
