[project]
name = "generated-project"
readme = "README.md"
version = "0.0.1"
dependencies = ["brewing", "psycopg[binary]"]
requires-python = ">=3.14"

[project.entry-points.brewing]
generated-project = "generated_project.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
