[project]
name = "project-manager"
version = "0.0.1-rc6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mike Cowie", email = "24739590+mikemcowie@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "brewing",
]

[project.scripts]
project-manager = "project_manager.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
brewing = { workspace = true }
