[project]
name = "project-manager"
version = "0.0.8-rc.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mike Cowie", email = "24739590+mikemcowie@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "brewing",
]

[project.scripts]
project-manager = "project_manager.app:cli"

[project.urls]
Homepage = "https://mikemcowie.github.io/brewing/"
Documentation = "https://mikemcowie.github.io/brewing/"
Repository = "https://github.com/mikemcowie/brewing"
Issues = "https://github.com/mikemcowie/brewing"
Releases = "https://github.com/mikemcowie/brewing/releases"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
brewing = { workspace = true }
