[project]
name = "testing-samples"
version = "0.0.11-rc.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mike Cowie", email = "24739590+mikemcowie@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.43",
]

[project.urls]
Homepage = "https://mikemcowie.github.io/brewing/"
Documentation = "https://mikemcowie.github.io/brewing/"
Repository = "https://github.com/mikemcowie/brewing"
Issues = "https://github.com/mikemcowie/brewing"
Releases = "https://github.com/mikemcowie/brewing/releases"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
